# J-Dub

./: .gitignore  README.md  README.zh.md  mdpi_clean.txt  mdpi_text.txt  pyproject.toml
cv/: .gitignore  README.md  get-weights.sh  pyproject.toml
cv/calib/: dal-lac1.json  hou-bos.json  lal-hou.json  lal-hou2.json  okc-nyk.json  test.json
cv/src/jdub_cv/: ball.py  calib.py  pipeline.py  stability.py  teams.py
cv/tests/: test_cv.py
data/parquet/actions/: 0021500438.parquet  cv-dal-lac1.parquet  cv-okc-nyk.parquet
data/parquet/coverages/: 0021500438.parquet  cv-lal-hou.parquet
data/parquet/games/: 0021500438.parquet  cv-dal-lac1.parquet  cv-lal-hou.parquet  cv-okc-nyk.parquet
data/parquet/matchups/: 0021500438.parquet  cv-dal-lac1.parquet  cv-lal-hou.parquet  cv-okc-nyk.parquet
data/parquet/moments/: cv-dal-lac1.parquet  cv-lal-hou.parquet  cv-okc-nyk.parquet
data/parquet/pbp/: 0021500438.parquet
data/parquet/players/: 0021500438.parquet  cv-dal-lac1.parquet  cv-lal-hou.parquet  cv-okc-nyk.parquet
docs/: cv-plan.md  detection-research.md  training-plan.md
src/jdub/: __init__.py  cli.py  commentary.py  data.py  events.py  robustness.py  studio.py  viz.py
src/jdub/static/: index.html
tests/: test_commentary.py  test_data.py  test_events.py  test_robustness.py  test_viz.py
tests/fixtures/: fixture_game.json
