[project]
name = "jdub"
version = "0.1.0"
description = "Justified Dubbing: grounded basketball tactical commentary from tracking data"
readme = "README.md"
authors = [
    { name = "QP_Wang66", email = "qipengwang66@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "matplotlib>=3.11.0",
    "polars>=1.42.1",
    "py7zr>=1.1.3",
    "requests>=2.34.2",
    "typer>=0.27.0",
    "uvicorn>=0.51.0",
]

[project.scripts]
jdub = "jdub.cli:app"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]
